[package]
name = "transaction-dependency-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
reqwest = "0.13.0"
multipart = "0.18.0"
base64 = "0.22"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19", features = ["v4",] }

[dev-dependencies]
httptest = "0.16.3"

